Backport support for Kubernetes 1.22 and 1.23